Fixes #403 - Apply to eBook should now work.
Fixed: The defaultStyleset of documents was not populated, and apply-to-document needed to ensure that there wasn't already a document styleset copy.

Bonus: Added script to set all styleset access levels when needed (old stylesets might have incorrect access levels).

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -66,7 +66,7 @@
 						<div class="styleset-options-menupoint first" data-ng-click="styleset.editingStyleSetTitle = true; hideStylesetOptions();">Rename</div>
 						<!--<div class="styleset-options-menupoint" data-ng-click="archiveStyleset(styleset); hideStylesetOptions();">archive</div>-->
 						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToDocument(styleset,true); hideStylesetOptions();">Apply to chapter</div>
-						<!--<div class="styleset-options-menupoint" data-ng-click="applyStylesetToProject(styleset); hideStylesetOptions();">Apply to ebook</div>-->
+						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToProject(styleset); hideStylesetOptions();">Apply to ebook</div>
 					</div>
 
 					<ul data-ng-show="typoChildrenVisible || isDefaultStyleset(styleset)" class="typo-children">
