implementing directive and calling it to check when people navigate away from the editor, fixes #295

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -268,7 +268,7 @@
 
 <div class="editor information" data-ng-class="{ 'menu-extended' : leftMenuShow || rightMenuShow }">
 		<p class="breadcrumb">
-			<a class="breadcrumb" href="#">Ebooks</a> / <span data-ng-bind="project.name"></span> / <span data-ng-bind="documentSelected.name"></span>
+			<a class="breadcrumb" data-ng-href="#/">Ebooks</a> / <span data-ng-bind="project.name"></span> / <span data-ng-bind="documentSelected.name"></span>
 		</p>
 		<p class="savedstamp">
 			<span data-ng-bind="lastSaved"></span>
