--- a/public/create/index.html
+++ b/public/create/index.html
@@ -9,7 +9,7 @@
 </head>
 <body data-ng-controller="appController" data-ng-cloak>
 
-	<div class="container" data-ng-class="{'shownotification' : showRegistrationInfoBar && !user.emailVerified && !user.isDemo, 'activation' : user._id}" data-ng-view></div>
+	<div class="container" data-ng-class="{'shownotification' : showRegistrationInfoBar || !user.emailVerified || !user.isDemo, 'activation' : user._id}" data-ng-view></div>
 
 	<div class="notifications" data-ng-class="{ 'loggedin' : !showRegistrationInfoBar || user.emailVerified || user.isDemo, 'activation' : user._id }">
 		We're in alpha. <a class="readmore" target="_blank" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
