--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -122,64 +122,64 @@
 				</li>-->
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertHyperlinkOptions' }">
 					<div class="left-menu-options">
-						<span class="menu-box inputfield full-size">
+						<span class="menu-box inputfield">
 							<input type="text" data-ng-model="linkAddress" placeholder="Target">
 						</span>
-						<span class="menu-box inputfield full-size left-menu-parameter-margin">
+						<span class="menu-box inputfield menu-parameter-margin">
 						<input id="hyperlinkInputBox" type="text" data-ng-model="linkText" placeholder="Text">
 						</span>
-						<span class="menu-box inputfield full-size left-menu-parameter-margin">
+						<span class="menu-box inputfield menu-parameter-margin">
 							<select data-ng-model="linkAnchor" data-ng-options="anchor.text for anchor in toc">
 								<option value="">Choose internal target</option>
 							</select>
 						</span>
-						<div class="left-menu-button left-menu-parameter-margin" data-ng-click="insertNewLink();">
+						<div class="menu-button menu-parameter-margin" data-ng-click="insertNewLink();">
 							Insert hyperlink
 						</div>
 					</div>
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
 					<div class="left-menu-options">
-						<label class="left-menu-button" for="imagesInput">
+						<label class="menu-button" for="imagesInput">
 							<input type="file" id="imagesInput" data-ng-file-select="onImageSelect($files)" accept="image/*" data-ng-hide="true">
 							<span>Insert image</span>
 						</label>
 					</div>
-					<!--<div class="left-menu-options left-menu-parameter-margin">
-						<span class="left-menu-button">
+					<!--<div class="left-menu-options menu-parameter-margin">
+						<span class="menu-button">
 							<a data-ng-click="alignImageLeft(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Left" />
 							</a>
 						</span>
-						<span class="left-menu-button">
+						<span class="menu-button">
 							<a data-ng-click="alignImageCenter(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Center" />
 							</a>
 						</span>
-						<span class="left-menu-button">
+						<span class="menu-button">
 							<a data-ng-click="alignImageRight(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Right" />
 							</a>
 						</span>
-						<span class="left-menu-button">
+						<span class="menu-button">
 							<a data-ng-click="insertImageOption('turnImage')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Turn Image" />
 							</a>
 						</span>
-						<span class="left-menu-button">
+						<span class="menu-button">
 							<a data-ng-click="duplicateImage(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Duplicate Image" />
 							</a>
 						</span>
-						<span class="left-menu-button">
+						<span class="menu-button">
 							<a data-ng-click="insertImageOption('resizeImage')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Resize Image" />
 							</a>
 						</span>
 					</div>
-					<div class="left-menu-options-parameters left-menu-parameter-margin">
+					<div class="left-menu-options-parameters menu-parameter-margin">
 						<div data-ng-class="{ 'expanded' : activeImageOption === 'turnImage' }">
-							<span class="left-menu-button">
+							<span class="menu-button">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Resize Image Set Procentages" />
 							</span>
 							<span class="menu-box inputfield">
@@ -188,7 +188,7 @@
 							</span>
 						</div>
 						<div data-ng-class="{ 'expanded' : activeImageOption === 'resizeImage' }">
-							<span class="left-menu-button">
+							<span class="menu-button">
 								<img src="/create/ckeditor/skins/scripler/icons/maximize.png" title="Resize Image Set Procentages" />
 							</span>
 							<span class="menu-box inputfield">
@@ -207,10 +207,10 @@
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
 					<div class="left-menu-options">
-						<div class="left-menu-button" data-ng-click="insertPageBreak()">
+						<div class="menu-button" data-ng-click="insertPageBreak()">
 							Insert page break
 						</div>
-						<!--<span class="left-menu-button">
+						<!--<span class="menu-button">
 							<a data-ng-click="insertPageBreakAvoid()">
 								<img src="/create/ckeditor/skins/scripler/icons/pagebreak.png" title="Avoid pagebreak" />
 							</a>
@@ -223,10 +223,10 @@
 						<span class="menu-box">
 							<input id="anchorInputBox" type="text" data-ng-model="anchorName" placeholder="Anchor name" class="anchor-name">
 						</span>
-						<div class="left-menu-button left-menu-parameter-margin" data-ng-click="insertNewAnchor();">
+						<div class="menu-button menu-parameter-margin" data-ng-click="insertNewAnchor();">
 							Insert anchor
 						</div>
-						<span class="menu-box left-menu-parameter-margin" data-ng-show="toc">
+						<span class="menu-box menu-parameter-margin" data-ng-show="toc">
 							<span class="option" data-ng-repeat="tocs in toc">
 								<a data-ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a>
 							</span>
@@ -303,25 +303,25 @@
 					<img src="pages/images/insert_titlepage.png" alt="Title page" title="Title page" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
-					<span class="right-menu-feature-title">
+					<div class="menu-feature-title">
 						Add cover
-					</span>
-					<span class="right-menu-feature-text">
+					</div>
+					<div>
 						Add an existing cover image to the beginning of the book. This image will also represent the book on virtual book shelves and in ebook stores.
-					</span>
-					<label class="right-menu-button right-menu-parameter-margin" for="coverInput">
+					</div>
+					<label class="menu-button menu-parameter-margin" for="coverInput">
 						<input type="file" id="coverInput" data-ng-file-select="onCoverSelect($files)" accept="image/*" data-ng-hide="true">
 						Add cover image
 					</label>
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
-					<span class="right-menu-feature-title">
+					<div class="menu-feature-title">
 						Generate title page
-					</span>
-					<span class="right-menu-feature-text">
+					</div>
+					<div>
 						A title page usually bears the full title, the author and similar. It is usually found at the beginning of a book.
-					</span>
-					<div class="right-menu-button full-size right-menu-parameter-margin" data-ng-click="generateTitlePage();">
+					</div>
+					<div class="menu-button menu-parameter-margin" data-ng-click="generateTitlePage();">
 						Generate title page
 					</div>
 				</li>
@@ -333,32 +333,32 @@
 					<img src="pages/images/insert_colophon.png" alt="Generate Colophon" title="Generate Colophon" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
-					<span class="right-menu-feature-title">
+					<div class="menu-feature-title">
 						Generate<br />Table of Contents
-					</span>
-					<span class="right-menu-feature-text">
+					</div>
+					<div>
 						The table of contents will be inserted in the beginning of the ebook and will be accessible in ebook readers for easy navigation.
-					</span>
-					<span class="right-menu-feature-text right-menu-parameter-margin">
+					</div>
+					<div class="menu-parameter-margin">
 						Preview
-					</span>
-					<span class="menu-box">
+					</div>
+					<div class="menu-box">
 						<span class="option" data-ng-repeat="tocs in toc"><a data-ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
-					</span>
-					<span class="right-menu-button full-size right-menu-parameter-margin" data-ng-click="generateToc();">
+					</div>
+					<div class="menu-button menu-parameter-margin" data-ng-click="generateToc();">
 						Generate ToC
-					</span>
+					</div>
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeColophonOptions' }">
-					<span class="right-menu-feature-title">
+					<div class="menu-feature-title">
 						Generate colophon
-					</span>
-					<span class="right-menu-feature-text">
+					</div>
+					<div>
 						A colophon is a brief statement containing information about a specific version of a book such as the ISBN-number, a creative commons or copyright notice, the people involved and so on.
-					</span>
-					<span class="right-menu-button full-size right-menu-parameter-margin" data-ng-click="generateColophon();">
+					</div>
+					<div class="menu-button menu-parameter-margin" data-ng-click="generateColophon();">
 						Generate colophon
-					</span>
+					</div>
 				</li>
 			</ul>
 		</div>
@@ -366,32 +366,32 @@
 			<ul>
 			<li class="outputOptionProperties">
 				<span class="menu-box label">Title</span>
-				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaTitleSaved }">
+				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaTitleSaved }">
 					<input type="text" name="output_title" id="output_title" data-ng-model="project.metadata.title" data-ng-model-options="{ debounce: 2000 }"  />
 				</span>
-				<span class="menu-box label left-menu-parameter-margin">Author</span>
-				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaAuthorsSaved }">
+				<span class="menu-box label menu-parameter-margin">Author</span>
+				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaAuthorsSaved }">
 					<input type="text" name="output_author" id="output_author" data-ng-model="project.metadata.authors" data-ng-model-options="{ debounce: 2000 }" />
 				</span>
-				<span class="menu-box label left-menu-parameter-margin">Language</span>
-				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaLanguageSaved }">
+				<span class="menu-box label menu-parameter-margin">Language</span>
+				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaLanguageSaved }">
 					<form class="angucomplete">
 						<div angucomplete-alt id="output_language" placeholder="Search Languages" pause="100" selected-object="selectedLanguage" local-data="languages" search-fields="description,subtag" title-field="description" minlength="1" match-class="angucomplete-highlight" initial-value="{{selectedLanguageName}}" field-required="true">
 						</div>
 					</form>
 				</span>
-				<span class="menu-box label left-menu-parameter-margin">Description</span>
-				<span class="menu-box inputfield full-size-text" data-ng-class="{ 'text-saved': metaDescriptionSaved }">
+				<span class="menu-box label menu-parameter-margin">Description</span>
+				<span class="menu-box inputfield textfield" data-ng-class="{ 'text-saved': metaDescriptionSaved }">
 					<textarea name="output_description" id="output_description" data-ng-model="project.metadata.description" data-ng-model-options="{ debounce: 2000 }" /></textarea>
 				</span>
-				<span class="menu-box label left-menu-parameter-margin">Unique identifier / ISBN</span>
-				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaIsbnSaved }">
+				<span class="menu-box label menu-parameter-margin">Unique identifier / ISBN</span>
+				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaIsbnSaved }">
 					<input type="text" name="output_unique" id="output_unique" data-ng-model="project.metadata.isbn" data-ng-model-options="{ debounce: 2000 }" />
 				</span>
 			</li>
 			<li class="outputOptionDownload">
 				<span class="menu-box label text-align-center">Download ebook</span>
-				<span class="menu-box label left-menu-parameter-margin left-menu-download">
+				<span class="menu-box label menu-parameter-margin left-menu-download">
 					<img title="Download epub" class="download-icon" src="pages/images/compile_epub.png" data-ng-click="exportEpub()">
 				</span>
 			</li>
