changed name from project-space to create

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="pages/css/pages/create.css" />
 
-<div class="main">
+<div class="wrapper-create">
 	<section class="section-unisquare" data-ng-class="{ 'white-bg' : showSettings}">
 		<div data-ng-hide="showSettings">
 			<div class="links">
@@ -61,7 +61,7 @@
 		</div>
 	</section>
 
-	<section class="section-projects-container">
+	<section class="section-projects-container clearfix">
 		<div class="projects-title">Ebooks</div>
 
 		<div class="section-projects">
