--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -125,61 +125,61 @@
 						<span class="menu-box inputfield">
 							<input id="hyperlinkTarget" type="text" data-ng-model="linkAddress" placeholder="Target">
 						</span>
-						<span class="menu-box inputfield menu-parameter-margin">
+						<span class="menu-box inputfield margin-top">
 						<input id="hyperlinkInputBox" type="text" data-ng-model="linkText" placeholder="Text">
 						</span>
-						<span class="menu-box inputfield menu-parameter-margin">
+						<span class="menu-box inputfield margin-top">
 							<select data-ng-model="linkAnchor" data-ng-options="anchor.text for anchor in toc">
 								<option value="">Choose internal target</option>
 							</select>
 						</span>
-						<div class="menu-button menu-parameter-margin" data-ng-click="insertNewLink();">
+						<div class="button margin-top" data-ng-click="insertNewLink();">
 							Insert hyperlink
 						</div>
 					</div>
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertImageOptions' }">
 					<div class="left-menu-options">
-						<label class="menu-button" for="imagesInput">
+						<label class="button" for="imagesInput">
 							<input type="file" id="imagesInput" data-ng-file-select="onImageSelect($files)" accept="image/*" data-ng-hide="true">
 							<span>Insert image</span>
 						</label>
 					</div>
-					<!--<div class="left-menu-options menu-parameter-margin">
-						<span class="menu-button">
+					<!--<div class="left-menu-options margin-top">
+						<span class="button">
 							<a data-ng-click="alignImageLeft(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Left" />
 							</a>
 						</span>
-						<span class="menu-button">
+						<span class="button">
 							<a data-ng-click="alignImageCenter(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Center" />
 							</a>
 						</span>
-						<span class="menu-button">
+						<span class="button">
 							<a data-ng-click="alignImageRight(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Align Image Right" />
 							</a>
 						</span>
-						<span class="menu-button">
+						<span class="button">
 							<a data-ng-click="insertImageOption('turnImage')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Turn Image" />
 							</a>
 						</span>
-						<span class="menu-button">
+						<span class="button">
 							<a data-ng-click="duplicateImage(); insertImageOption('')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Duplicate Image" />
 							</a>
 						</span>
-						<span class="menu-button">
+						<span class="button">
 							<a data-ng-click="insertImageOption('resizeImage')">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Resize Image" />
 							</a>
 						</span>
 					</div>
-					<div class="left-menu-options-parameters menu-parameter-margin">
+					<div class="left-menu-options-parameters margin-top">
 						<div data-ng-class="{ 'expanded' : activeImageOption === 'turnImage' }">
-							<span class="menu-button">
+							<span class="button">
 								<img src="/create/ckeditor/skins/scripler/icons/image.png" title="Resize Image Set Procentages" />
 							</span>
 							<span class="menu-box inputfield">
@@ -188,7 +188,7 @@
 							</span>
 						</div>
 						<div data-ng-class="{ 'expanded' : activeImageOption === 'resizeImage' }">
-							<span class="menu-button">
+							<span class="button">
 								<img src="/create/ckeditor/skins/scripler/icons/maximize.png" title="Resize Image Set Procentages" />
 							</span>
 							<span class="menu-box inputfield">
@@ -207,10 +207,10 @@
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
 					<div class="left-menu-options">
-						<div class="menu-button" data-ng-click="insertPageBreak()">
+						<div class="button" data-ng-click="insertPageBreak()">
 							Insert page break
 						</div>
-						<!--<span class="menu-button">
+						<!--<span class="button">
 							<a data-ng-click="insertPageBreakAvoid()">
 								<img src="/create/ckeditor/skins/scripler/icons/pagebreak.png" title="Avoid pagebreak" />
 							</a>
@@ -223,10 +223,10 @@
 						<span class="menu-box">
 							<input id="anchorInputBox" type="text" data-ng-model="anchorName" placeholder="Anchor name" class="anchor-name">
 						</span>
-						<div class="menu-button menu-parameter-margin" data-ng-click="insertNewAnchor();">
+						<div class="button margin-top" data-ng-click="insertNewAnchor();">
 							Insert anchor
 						</div>
-						<span class="menu-box menu-parameter-margin" data-ng-show="toc">
+						<span class="menu-box margin-top" data-ng-show="toc">
 							<span class="option" data-ng-repeat="tocs in toc">
 								<a data-ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a>
 							</span>
@@ -307,7 +307,7 @@
 					<div>
 						Add an existing cover image to the beginning of the book. This image will also represent the book on virtual book shelves and in ebook stores.
 					</div>
-					<label class="menu-button menu-parameter-margin" for="coverInput">
+					<label class="button margin-top" for="coverInput">
 						<input type="file" id="coverInput" data-ng-file-select="onCoverSelect($files)" accept="image/*" data-ng-hide="true">
 						Add cover image
 					</label>
@@ -319,7 +319,7 @@
 					<div>
 						A title page usually bears the full title, the author and similar. It is usually found at the beginning of a book.
 					</div>
-					<div class="menu-button menu-parameter-margin" data-ng-click="generateTitlePage();">
+					<div class="button margin-top" data-ng-click="generateTitlePage();">
 						Generate title page
 					</div>
 				</li>
@@ -337,13 +337,13 @@
 					<div>
 						The table of contents will be inserted in the beginning of the ebook and will be accessible in ebook readers for easy navigation.
 					</div>
-					<div class="menu-parameter-margin">
+					<div class="margin-top">
 						Preview
 					</div>
 					<div class="menu-box">
 						<span class="option" data-ng-repeat="tocs in toc"><a data-ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
 					</div>
-					<div class="menu-button menu-parameter-margin" data-ng-click="generateToc();">
+					<div class="button margin-top" data-ng-click="generateToc();">
 						Generate ToC
 					</div>
 				</li>
@@ -354,7 +354,7 @@
 					<div>
 						A colophon is a brief statement containing information about a specific version of a book such as the ISBN-number, a creative commons or copyright notice, the people involved and so on.
 					</div>
-					<div class="menu-button menu-parameter-margin" data-ng-click="generateColophon();">
+					<div class="button margin-top" data-ng-click="generateColophon();">
 						Generate colophon
 					</div>
 				</li>
@@ -367,29 +367,29 @@
 				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaTitleSaved }">
 					<input type="text" name="output_title" id="output_title" data-ng-model="project.metadata.title" data-ng-model-options="{ debounce: 2000 }"  />
 				</span>
-				<span class="menu-box label menu-parameter-margin">Author</span>
+				<span class="menu-box label margin-top">Author</span>
 				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaAuthorsSaved }">
 					<input type="text" name="output_author" id="output_author" data-ng-model="project.metadata.authors" data-ng-model-options="{ debounce: 2000 }" />
 				</span>
-				<span class="menu-box label menu-parameter-margin">Language</span>
+				<span class="menu-box label margin-top">Language</span>
 				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaLanguageSaved }">
 					<form class="angucomplete">
 						<div angucomplete-alt id="output_language" placeholder="Search Languages" pause="100" selected-object="selectedLanguage" local-data="languages" search-fields="description,subtag" title-field="description" minlength="1" match-class="angucomplete-highlight" initial-value="{{selectedLanguageName}}" field-required="true">
 						</div>
 					</form>
 				</span>
-				<span class="menu-box label menu-parameter-margin">Description</span>
+				<span class="menu-box label margin-top">Description</span>
 				<span class="menu-box inputfield textfield" data-ng-class="{ 'text-saved': metaDescriptionSaved }">
 					<textarea name="output_description" id="output_description" data-ng-model="project.metadata.description" data-ng-model-options="{ debounce: 2000 }" /></textarea>
 				</span>
-				<span class="menu-box label menu-parameter-margin">Unique identifier / ISBN</span>
+				<span class="menu-box label margin-top">Unique identifier / ISBN</span>
 				<span class="menu-box inputfield" data-ng-class="{ 'text-saved': metaIsbnSaved }">
 					<input type="text" name="output_unique" id="output_unique" data-ng-model="project.metadata.isbn" data-ng-model-options="{ debounce: 2000 }" />
 				</span>
 			</li>
 			<li class="outputOptionDownload">
 				<span class="menu-box label text-align-center">Download ebook</span>
-				<span class="menu-box label menu-parameter-margin left-menu-download">
+				<span class="menu-box label margin-top left-menu-download">
 					<img title="Download epub" class="download-icon" src="pages/images/compile_epub.png" data-ng-click="exportEpub()">
 				</span>
 			</li>
