re-positioning the feedback/talk button, fixes #879

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -90,8 +90,8 @@
 				</div>
 			</div>
 
-			<div class="feedback fixed-position" data-ng-click="openFeedback()">
-				<img src="pages/images/feedback.svg" width="20" />
+			<div class="feedback" data-ng-click="openFeedback()">
+				Talk
 			</div>
 		</div>
 	</section>
