--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -438,19 +438,20 @@
 			<li class="menu-item-background">
 				<div class="menu-box label">picture</div>
 				<div class="menu-box label">Title</div>
-				<div class="menu-box label menu-parameter-margin">Status</div>
+				<div class="menu-box label margin-top">Status</div>
 				<div class="menu-status">Not published</div>
 				<div class="menu-status published">
 					<div>Published</div>
 					<div class="font-small font-italic">01.01.2015</div>
 				</div>
-				<div class="menu-box label menu-parameter-margin">Shareable link</div>
+				<div class="menu-box label margin-top">Shareable link</div>
 				<div class="menu-box inputfield" data-ng-show="true">
 					<input type="text" name="share_link" id="share_link" data-ng-value="project.links.share" />
 				</div>
-				<div class="menu-box label desc menu-parameter-margin">
+				<div class="menu-box label desc margin-top">
 					<div class="menu-feature-title">Publish</div>
 					<div>Description...</div>
+				</div>
 			</li>
 			<li class="menu-item-background-none">
 				<div class="button" data-ng-click="">
