adding the description for publish

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -450,7 +450,7 @@
 				</div>
 				<div class="menu-box label desc margin-top">
 					<div class="menu-feature-title">Publish</div>
-					<div>Description...</div>
+					<div>Publish <strong><em>{{project.metadata.title}}</em></strong> on the web. It will be readable for anyone with the URL. When published you can unpublish or update to the latest version.</div>
 				</div>
 			</li>
 			<li class="menu-item-background-none">
