--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -29,10 +29,11 @@
 						</a>
 					</p>
 
-					<form data-ng-show="projectDocument.editingProjectDocumentTitle">
-						<p>
-						<textarea class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-blur="renameProjectDocument(projectDocument); projectDocument.editingProjectDocumentTitle = false;"></textarea>
-						</p>
+					<form name="titleEdit{{projectDocuments.length}}" class="documentTitleEdit" data-ng-show="projectDocument.editingProjectDocumentTitle">
+						 
+						<input type="text" name="textEdit" class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-blur="renameProjectDocument(projectDocument); projectDocument.editingProjectDocumentTitle = false;" required>
+						<span class="nameError" ng-show="titleEdit{{projectDocuments.length}}.textEdit.$error.required">The title is required!</span><br>
+						
 					</form>
 
 					<div class="projectDocument-options" data-ng-show="$index == selectedProjectDocumentOptions">
