small change to text

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -245,7 +245,7 @@
 						</span>
 						<div class="menu-box label desc margin-top">
 							<div class="menu-feature-title">Anchor</div>
-							<div>Insert an anchor in the text. Anchors  are included in the table of contents and can be linked to with hyperlinks.</div>
+							<div>Insert an anchor in the text. Anchors are included in the table of contents and can be targeted with hyperlinks.</div>
 						</div>
 					</div>
 				</li>
