--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -151,7 +151,7 @@
 					</div>
 					<div class="menu-box label desc margin-top">
 						<div class="menu-feature-title">Image</div>
-						<div>Upload and insert images. Supported formats are JPG, PNG and SVG. As a rule of thumb the image should be around 1600 pixels on the longest side.</div>
+						<div>Upload and insert images. Supported formats: JPG, PNG and SVG. Max size: 10 MB. As a rule of thumb the image should be around 1600 pixels on the longest side.</div>
 					</div>
 					<!--<div class="left-menu-options margin-top">
 						<span class="button">
@@ -323,7 +323,7 @@
 					</label>
 					<div class="menu-box label desc margin-top">
 						<div class="menu-feature-title">Add cover</div>
-						<div>Add an existing cover image to the beginning of the book. This image will also represent the book on virtual book shelves and in ebook stores.</div>
+						<div>Add an existing cover image to the beginning of the book. This image will also represent the book on virtual book shelves and in ebook stores. Supported formats: JPG and PNG. Max size: 10 MB.</div>
 					</div>
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
