--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -30,12 +30,10 @@
 					</p>
 
 					<form name="titleEdit{{projectDocuments.length}}" class="documentTitleEdit" data-ng-show="projectDocument.editingProjectDocumentTitle">
-						<!--
-						<textarea name="textEdit" class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-blur="renameProjectDocument(projectDocument,  $index ); projectDocument.editingProjectDocumentTitle = false;" required>
-						-->
-						<textarea name="textEdit" class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-blur="renameProjectDocument(projectDocument); projectDocument.editingProjectDocumentTitle = false;" required></textarea>
+
+						<textarea name="textEdit" class="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" blur-on-enter data-ng-focus="storeTitle(projectDocument)" data-ng-blur="renameProjectDocument(projectDocument)" required></textarea>
 						
-						<span class="nameError" ng-show="titleEdit{{projectDocuments.length}}.textEdit.$error.required">The title is required!</span><br>
+						<div class="nameError" ng-show="titleEdit{{projectDocuments.length}}.textEdit.$error.required">The title is required!</div> 
 						
 					</form>
 
