--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -78,8 +78,9 @@
 					(…)
 				</div>
 
-				<form data-ng-show="project.editingProjectTitle">
-					<textarea id="rename" data-ng-model="project.name" placeholder="project title" focus-on="!!project.editingProjectTitle" blur-on-enter data-ng-blur="project.editingProjectTitle = false; renameProject(project);"></textarea>
+				<form name="project{{$index}}" class="projectTitleEditing" data-ng-show="project.editingProjectTitle">
+					<textarea id="rename" name="projectTitleEdit" data-ng-model="project.name" placeholder="project title" focus-on="!!project.editingProjectTitle" blur-on-enter data-ng-focus="storeTitle(project)" data-ng-blur="project.editingProjectTitle = false; renameProject(project);" required></textarea>
+					<div class="nameError" ng-show="project{{$index}}.projectTitleEdit.$error.required">The title is required!</div> 
 				</form>
 
 				<div class="project-options" data-ng-show="$index == selectedProjectOptions">
