--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -436,32 +436,30 @@
 	<div class="menu-item-right" data-ng-show="rightMenuShowItem == 'publish'">
 		<ul>
 			<li class="menu-item-background">
-				<div class="menu-box label">picture</div>
-				<div class="menu-box label">Title</div>
+				<div class="menu-box label text-align-center">picture</div>
+				<div class="menu-box label text-align-center">{{ project.metadata.title }}</div>
 				<div class="menu-box label margin-top">Status</div>
-				<div class="menu-status">Not published</div>
-				<div class="menu-status published">
+				<div class="menu-status" data-ng-hide="projectPublishStatus">Not published</div>
+				<div class="menu-status published" data-ng-show="projectPublishStatus">
 					<div>Published</div>
-					<div class="font-small font-italic">01.01.2015</div>
+					<div class="font-small font-italic">{{ projectPublishDate }}</div>
 				</div>
-				<div class="menu-box label margin-top">Shareable link</div>
-				<div class="menu-box inputfield" data-ng-show="true">
-					<input type="text" name="share_link" id="share_link" data-ng-value="project.links.share" />
+				<div class="menu-box label margin-top" data-ng-show="projectPublishStatus">Shareable link</div>
+				<div class="menu-box inputfield" data-ng-show="projectPublishStatus">
+					<input type="text" name="share_link" id="share_link" data-ng-value="projectPublishLink" />
+				</div>
+				<div class="button margin-top" data-ng-click="publishPublishProject();" data-ng-hide="projectPublishStatus">
+					Publish
+				</div>
+				<div class="button margin-top" data-ng-click="publishUpdateProject();" data-ng-show="projectPublishStatus">
+					Update
+				</div>
+				<div class="button revert margin-top" data-ng-click="publishUnpublishProject();" data-ng-show="projectPublishStatus">
+					Unpublish
 				</div>
 				<div class="menu-box label desc margin-top">
 					<div class="menu-feature-title">Publish</div>
-					<div>Publish <strong><em>{{project.metadata.title}}</em></strong> on the web. It will be readable for anyone with the URL. When published you can unpublish or update to the latest version.</div>
-				</div>
-			</li>
-			<li class="menu-item-background-none">
-				<div class="button" data-ng-click="">
-					Publish
-				</div>
-				<div class="button" data-ng-click="">
-					Update
-				</div>
-				<div class="button revert" data-ng-click="">
-					Unpublish
+					<div>Publish <strong><em>{{ project.metadata.title }}</em></strong> directly on the web. Anyone can read it. When published you can unpublish or update to the latest version.<br>To publish to ebook stores like the Amazon Kindle Store, <a href="http://talk.scripler.com/t/official-scripler-faq/109#q8" target="_blank">see this</a>.</div>
 				</div>
 			</li>
 		</ul>
