--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -412,7 +412,7 @@
 			</li>
 			<li class="menu-item-background-none">
 				<span class="menu-box label text-align-center">Download ebook</span>
-				<span class="menu-box label margin-top left-menu-download">
+				<span class="menu-box label text-align-center margin-top">
 					<img title="Download epub" class="download-icon" src="pages/images/compile_epub.png" data-ng-click="exportEpub()">
 				</span>
 
