added Blog button in the ebook space

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -101,7 +101,10 @@
 				</div>
 			</div>
 
-			<div class="feedback" data-ng-click="openFeedback()">
+			<div class="top-btn blog" data-ng-click="http://blog.scripler.com/">
+				Blog
+			</div>
+			<div class="top-btn feedback" data-ng-click="openFeedback()">
 				Talk!
 			</div>
 		</div>
