changed top-btn to btn-top

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -101,10 +101,10 @@
 				</div>
 			</div>
 
-			<div class="top-btn blog" data-ng-click="http://blog.scripler.com/">
+			<div class="btn-top blog" data-ng-click="http://blog.scripler.com/">
 				Blog
 			</div>
-			<div class="top-btn feedback" data-ng-click="openFeedback()">
+			<div class="btn-top feedback" data-ng-click="openFeedback()">
 				Talk!
 			</div>
 		</div>
