--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -101,11 +101,11 @@
 				</div>
 			</div>
 
-			<div class="btn-top blog" data-ng-click="http://blog.scripler.com/">
-				Blog
+			<div class="btn-top blog">
+				<a href="http://blog.scripler.com/">Blog</a>
 			</div>
-			<div class="btn-top feedback" data-ng-click="openFeedback()">
-				Talk!
+			<div class="btn-top feedback">
+				<a href="http://talk.scripler.com/">Talk!</a>
 			</div>
 		</div>
 	</section>
